--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
 ﻿body {
     padding-top: 70px;
-    padding-bottom: 100px;
+    padding-bottom: 40px;
     position: relative;
 }
-/* Set padding to keep content from hitting the edges */
+
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
-
-/* Set width on the form input elements since they're 100% wide by default */
+ 
 input,
 select,
 textarea {
@@ -17,10 +16,33 @@ textarea {
 }
 
 .brand {
-  height: 40px;
-  width: 40px;
+    height: 100px;
+    width: 100px;
 }
 
 .navbar-brand {
   padding: 5px;
+}
+
+.size{
+    width: 35px;    
+}
+
+.navbar-default{
+    background-color: rgba(0,0,0,.8);
+    box-shadow: 0 0 10px rgba(0,0,0,.8) inset;
+}
+
+
+.rodape{
+    background-color: rgba(0,0,0,.8);
+    box-shadow: 0 0 10px rgba(0,0,0,.8) inset;
+    bottom: 0;
+    color: #999;
+    font-size: 14px;
+    left: 0;
+    padding: 10px 20px;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
 }
